@@ -1,6 +1,7 @@
 Version 2.01.04 - 
 ===================================
   Gulm clvmd doesn't report "connection refused" errors.
+  clvmd does a basic config file sanity check at startup.
 
 Version 2.01.03 - 1st February 2005
 ===================================
